--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -4,7 +4,7 @@
 // Include any default variable overrides here (though functions won't be available)
 $primary: darkred;
 $theme-colors: (
-  "primary":    yellow,
+  "primary":    $primary,
 
 );
 
