--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,12 +2,21 @@
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won't be available)
-$primary: darkred;
+
+$primary: #5265E1;
+$secondary: #FA5959;
 $theme-colors: (
   "primary":    $primary,
-
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "light":      $light,
+  "dark":       $dark
 );
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+
 
 // Then add additional custom code here
