--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,24 +1,32 @@
 // Custom.scss
-// Option A: Include all of Bootstrap
 
-// Include any default variable overrides here (though functions won't be available)
+// 1. Include any default variable overrides here
+$enable-negative-margins:     true;
 
 $primary: #5265E1;
 $secondary: #FA5959;
+$enable-shadows:              true;
+$enable-gradients:            true;
+// 2 Include functions first (so you can manipulate colors, SVGs, calc, etc)
+@import "../node_modules/bootstrap/scss/functions";
+// 2.1 Include default variable overrides here with variables from _varialbles.scss
+@import "../node_modules/bootstrap/scss/variables";
 
+$box-shadow: 0 .5rem 1rem rgba($blue-700, .20);
+$box-shadow-lg: 0 1rem 3rem rgba($blue-400, 0.18);
+$warning: $yellow-500;
 
+$custom-theme: (
+    "primary":  $primary,
+    "secondary":  $secondary,
+    "light-2": $gray-200,
+    "alerta": $warning
+);
 
+$theme-colors: map-merge($theme-colors, $custom-theme);
+
+// 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+// 4. Include any optional Bootstrap components as you like
 @import "custom";
-
-
-// Then add additional custom code here
-// .letter {
-//   letter-spacing: 0.1rem;
-//   text-transform: uppercase;
-//   font-weight: 500;
-// }
-
-// .logo-bookmark {
-//   padding: 0.6rem 2rem;
-// }
