features section styled again

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,7 +53,7 @@ $nav-tabs-border-color:             $gray-300; // changed to $orange
 $nav-tabs-border-width:             $border-width;
 $nav-tabs-border-radius:            $border-radius;
 $nav-tabs-link-hover-border-color:  $gray-200 $nav-tabs-border-color;
-$nav-tabs-link-active-color:        $orange; // changed to $orange
+$nav-tabs-link-active-color:        $gray-700; // changed to $orange.
 $nav-tabs-link-active-bg:           $body-bg;
 $nav-tabs-link-active-border-color: $orange $nav-tabs-link-active-bg;
 
