--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3145,7 +3145,7 @@ textarea.form-control-lg {
       border-color: transparent; }
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
-    color: #fd7e14;
+    color: #495057;
     background-color: #fff;
     border-color: #fd7e14 #fff; }
   .nav-tabs .dropdown-menu {
