--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8599,12 +8599,20 @@ textarea.form-control-lg {
   padding: 0.6rem 2rem; }
 
 /*This is modifying the btn-primary colors but you could create your own .btn-something class as well*/
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
   color: #5265E1 !important;
   border-color: #5265E1;
   background-color: #fff; }
 
-.btn-light-2:hover, .btn-light-2:focus, .btn-light-2:active, .btn-light-2.active, .open > .dropdown-toggle.btn-light-2 {
+.btn-light-2:hover,
+.btn-light-2:focus,
+.btn-light-2:active,
+.btn-light-2.active,
+.open > .dropdown-toggle.btn-light-2 {
   border-color: #495057;
   background-color: #fff; }
 
@@ -8622,21 +8630,38 @@ textarea.form-control-lg {
   .nav-link:hover {
     border: transparent !important; }
 
-.overflow-query {
+.overflow-figurate,
+.overflow-figurate-1 {
   overflow: hidden; }
 
-div.bg-figure {
+.bg-figure {
   z-index: -1;
   transform: translate(-25%, -30%);
   width: 100%;
   height: 9rem;
   border-end-start-radius: 5rem; }
 
+.overflow-figure-1 {
+  height: 13rem; }
+
+.bg-figure-componet-tab {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  background-color: #5265E1;
+  transform: translate(-67%, -1%);
+  width: 100%;
+  height: 17rem;
+  border-end-end-radius: 8rem; }
+
 @media (min-width: 375px) {
   .bg-figure {
     transform: translate(-25%, -30%) !important;
     width: 90% !important;
-    height: 10.5rem !important; } }
+    height: 10.5rem !important; }
+  .bg-figure-componet-tab {
+    height: 12.5rem; } }
 
 @media (min-width: 768px) {
   .bg-figure {
@@ -8650,7 +8675,9 @@ div.bg-figure {
   .bg-figure {
     transform: translate(-25%, -40%) !important;
     width: 100% !important;
-    height: 15rem !important; } }
+    height: 15rem !important; }
+  .bg-figure-componet-tab {
+    height: 17rem; } }
 
 @media (min-width: 1218px) {
   .bg-figure {
