--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -12,20 +12,23 @@
 
 /*This is modifying the btn-primary colors but you could create your own .btn-something class as well*/
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
   color: $primary !important;
   border-color: $primary;
   background-color: $body-bg;
 }
-.btn-light-2:hover, .btn-light-2:focus, .btn-light-2:active, .btn-light-2.active, .open>.dropdown-toggle.btn-light-2 {
-
+.btn-light-2:hover,
+.btn-light-2:focus,
+.btn-light-2:active,
+.btn-light-2.active,
+.open > .dropdown-toggle.btn-light-2 {
   border-color: $gray-700;
   background-color: $body-bg;
 }
-
-
-
-
 
 // custom elements tab start
 
@@ -36,7 +39,7 @@
   margin: 0;
 }
 .tab-content {
-  .active{
+  .active {
     border: none !important;
   }
 }
@@ -47,17 +50,39 @@
   }
 }
 // custom elements tab end
-.overflow-query {
+
+// figurita del fondo azul START
+.overflow-figurate,
+.overflow-figurate-1 {
   overflow: hidden;
 }
 
-div.bg-figure {
+.bg-figure {
   z-index: -1;
   transform: translate(-25%, -30%);
   width: 100%;
   height: 9rem;
   border-end-start-radius: 5rem;
 }
+
+.overflow-figure-1 {
+  height: 13rem;
+  // border: 2px solid rgb(101, 181, 15) !important; // for desing proposals
+}
+.bg-figure-componet-tab {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  background-color: $primary;
+  transform: translate(-67%, -1%);
+  width: 100%;
+  height: 17rem;
+  border-end-end-radius: 8rem;
+}
+
+// figurita del fondo azul END
+
 // mobile S, M
 @media (min-width: 375px) {
   .bg-figure {
@@ -65,7 +90,11 @@ div.bg-figure {
     width: 90% !important;
     height: 10.5rem !important;
   }
+  .bg-figure-componet-tab {
+    height: 12.5rem;
+  }
 }
+
 // tablet
 @media (min-width: 768px) {
   .bg-figure {
@@ -77,11 +106,17 @@ div.bg-figure {
     overflow: visible;
   }
 }
+
+// DESKTOP
 @media (min-width: 1024px) {
   .bg-figure {
     transform: translate(-25%, -40%) !important;
     width: 100% !important;
     height: 15rem !important;
+  }
+  .bg-figure-componet-tab {
+    height: 17rem;
+
   }
 }
 @media (min-width: 1218px) {
