exercici-2 reposive componet tab fixed

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -30,6 +30,11 @@
   background-color: $body-bg;
 }
 
+// SPACER
+.spacer {
+  height: 10rem;
+}
+
 // custom elements tab start
 
 .active {
@@ -82,19 +87,63 @@
 }
 
 // figurita del fondo azul END
+// card componet START
+.card-group {
+  gap: 3%;
+}
+.card {
+  display: flex;
+  align-items: center;
+  padding-top: 2rem;
+  box-shadow: 1px 10px 16px -2px rgba(0, 0, 0, 0.15);
+}
+.card-img {
+  width: 30% !important;
+}
+.card-body {
+  text-align: center;
+  h5 {
+    font-weight: 900 !important;
+  }
+}
 
+.card-text {
+  // background-image: linear-gradient(
+  //   to right,
+  //   gray 33%,
+  //   rgba(255, 255, 255, 0) 20%
+  // );
+  // background-position: bottom;
+  // background-size: 10px 1px;
+
+  // background-repeat: repeat-x;
+  border-bottom: 5px dotted  gray;
+  // border-width: 3px;
+  padding-bottom: 2rem;
+}
+// card componet END
+
+// MEDIA QUERIES
 // mobile S, M
 @media (min-width: 375px) {
   .bg-figure {
     transform: translate(-25%, -30%) !important;
     width: 90% !important;
     height: 10.5rem !important;
-  }
-  .bg-figure-componet-tab {
-    height: 12.5rem;
+    // background-color: red !important;
   }
 }
+@media (max-width: 320px) {
+  .bg-figure-componet-tab {
+    height: 5.5rem !important;
+  }
+}
+@media (max-width: 1024px) {
+  .bg-figure-componet-tab {
+    height: 13.5rem;
 
+  }
+}
 // tablet
 @media (min-width: 768px) {
   .bg-figure {
@@ -116,7 +165,6 @@
   }
   .bg-figure-componet-tab {
     height: 17rem;
-
   }
 }
 @media (min-width: 1218px) {
