--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8616,6 +8616,9 @@ textarea.form-control-lg {
   border-color: #495057;
   background-color: #fff; }
 
+.spacer {
+  height: 10rem; }
+
 .active {
   border: none !important;
   border-bottom: solid #fd7e14 !important;
@@ -8655,13 +8658,40 @@ textarea.form-control-lg {
   height: 17rem;
   border-end-end-radius: 8rem; }
 
+.card-group {
+  gap: 3%; }
+
+.card {
+  display: flex;
+  align-items: center;
+  padding-top: 2rem;
+  box-shadow: 1px 10px 16px -2px rgba(0, 0, 0, 0.15); }
+
+.card-img {
+  width: 30% !important; }
+
+.card-body {
+  text-align: center; }
+  .card-body h5, .card-body .h5 {
+    font-weight: 900 !important; }
+
+.card-text {
+  border-bottom: 5px dotted  gray;
+  padding-bottom: 2rem; }
+
 @media (min-width: 375px) {
   .bg-figure {
     transform: translate(-25%, -30%) !important;
     width: 90% !important;
-    height: 10.5rem !important; }
+    height: 10.5rem !important; } }
+
+@media (max-width: 320px) {
   .bg-figure-componet-tab {
-    height: 12.5rem; } }
+    height: 5.5rem !important; } }
+
+@media (max-width: 1024px) {
+  .bg-figure-componet-tab {
+    height: 13.5rem; } }
 
 @media (min-width: 768px) {
   .bg-figure {
