--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -34,7 +34,6 @@
 .spacer {
   height: 10rem;
 }
-
 // custom elements tab start
 
 .active {
@@ -101,8 +100,9 @@
 .card {
   display: flex;
   align-items: center;
+  border: none;
   padding-top: 2rem;
-  box-shadow: 1px 10px 16px -2px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 10px 16px -2px rgba(221, 221, 221, 0.65);
 }
 .card-img {
   width: 30% !important;
@@ -115,20 +115,19 @@
 }
 
 .card-text {
-  // background-image: linear-gradient(
-  //   to right,
-  //   gray 33%,
-  //   rgba(255, 255, 255, 0) 20%
-  // );
-  // background-position: bottom;
-  // background-size: 10px 1px;
-
-  // background-repeat: repeat-x;
-  border-bottom: 5px dotted  gray;
-  // border-width: 3px;
+  border-bottom: 5px dotted  $gray-200;
   padding-bottom: 2rem;
 }
+.text-silver {
+  color: $gray-500;
+}
 // card componet END
+
+// FAQs START
+
+// FAQs END
+
+
 
 // MEDIA QUERIES
 // mobile S, M
@@ -138,6 +137,9 @@
     width: 90% !important;
     height: 10.5rem !important;
     // background-color: red !important;
+  }
+  .marginleft {
+    margin-left: 4rem;
   }
 }
 @media (max-width: 320px) {
