--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3716,9 +3716,9 @@ textarea.form-control-lg {
     .accordion-button {
       transition: none; } }
   .accordion-button:not(.collapsed) {
-    color: #4a5bcb;
-    background-color: #eef0fc;
-    box-shadow: inset 0 -1px 0 rgba(111, 66, 193, 0.125); }
+    color: #1e2125;
+    background-color: white;
+    box-shadow: inset 0 -1px 0 rgba(173, 181, 189, 0.425); }
     .accordion-button:not(.collapsed)::after {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%234a5bcb'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
       transform: rotate(-180deg); }
@@ -3748,7 +3748,7 @@ textarea.form-control-lg {
 
 .accordion-item {
   background-color: #fff;
-  border: 1px solid rgba(111, 66, 193, 0.125); }
+  border: 1px solid rgba(173, 181, 189, 0.425); }
   .accordion-item:first-of-type {
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem; }
@@ -8687,6 +8687,22 @@ textarea.form-control-lg {
 
 .text-silver {
   color: #adb5bd; }
+
+.accordion-item {
+  border: none;
+  background-color: #fff; }
+  .accordion-item .accordion-body {
+    color: #6c757d;
+    line-height: 2.9rem; }
+
+/* Custom style */
+.accordion-button::after {
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='darkblue'><path d='M0 0h24v24H0z' fill='none'/><path d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/></svg>");
+  transform: scale(1.7) !important; }
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='red'><path d='M0 0h24v24H0z' fill='none'/><path d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/></svg>");
+  transform: scale(1.7) rotate(-180deg) !important; }
 
 @media (min-width: 375px) {
   .bg-figure {
