--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3716,7 +3716,7 @@ textarea.form-control-lg {
     .accordion-button {
       transition: none; } }
   .accordion-button:not(.collapsed) {
-    color: #1e2125;
+    color: #41464b;
     background-color: white;
     box-shadow: inset 0 -1px 0 rgba(173, 181, 189, 0.425); }
     .accordion-button:not(.collapsed)::after {
@@ -8695,10 +8695,17 @@ textarea.form-control-lg {
     color: #6c757d;
     line-height: 2.9rem; }
 
+.accordion-button:hover {
+  color: #e35d6a; }
+
+.accordion-button:hover:not(.collapsed) {
+  color: #212529; }
+
 /* Custom style */
 .accordion-button::after {
   background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='darkblue'><path d='M0 0h24v24H0z' fill='none'/><path d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/></svg>");
-  transform: scale(1.7) !important; }
+  transform: scale(1.7) !important;
+  fill: yellow !important; }
 
 .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 0 24 24' width='24px' fill='red'><path d='M0 0h24v24H0z' fill='none'/><path d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/></svg>");
