--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,7 +84,7 @@ $accordion-button-color:                  $accordion-color;
 $accordion-button-bg:                     $accordion-bg;
 $accordion-transition:                    $btn-transition, border-radius .15s ease;
 $accordion-button-active-bg:              tint-color($component-active-bg, 50%);
-$accordion-button-active-color:           shade-color($body-color, 10%);
+$accordion-button-active-color:           shade-color($gray-600, 40%);
 
 $accordion-button-focus-border-color:     $input-focus-border-color;
 $accordion-button-focus-box-shadow:       $btn-focus-box-shadow;
