--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -58,7 +58,7 @@
   }
   .btn-secondary {
     &:hover {
-      background-color: $white !important;
+      background-color: $white;
       color: $red-400 !important;
 
     }
@@ -66,6 +66,7 @@
   svg{
     &:hover {
       fill: $red-400;
+      cursor: pointer;
     }
   }
   span{
@@ -233,7 +234,7 @@ $padding-value: 6rem;
     padding: 0 $padding-value 0 $padding-value;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   .bg-figure-componet-tab {
     height: 5.5rem !important;
   }
